<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quotehub"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_categories"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/wisdomCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_category"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/quote_2_"
                    android:textSize="30sp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wisdom"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/artCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_category"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/art"
                    android:textSize="30sp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/art"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/successCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/coral_category"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:src="@drawable/success"
                    android:textSize="30sp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/friendshipCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_category"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/friendship"
                    android:textSize="30sp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friendship"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/positiveCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_light"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/positive"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positive"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lifeCategoryCard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green_category"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/life"
                    android:textSize="30dp"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>